# graded-optic

./: .gitignore  LICENSE  README.md  graded-bayes.cabal
examples/: Bridge.hs  Cybernetic.hs
src/Control/Monad/Bayes/Graded/: Class.hs  Compat.hs  Do.hs  Optic.hs  Population.hs  Weighted.hs
src/Control/Monad/Bayes/Graded/Semiring/: Class.hs  GF3.hs  LogDomain.hs  Polynomial.hs  Tropical.hs
test/: Isomorphism.hs  Main.hs  OpticLaws.hs  SemiringLaws.hs
